--- a/Lego/style.css
+++ b/Lego/style.css
@@ -1,3 +1,69 @@
-#test {
-font-size: 60px; 
-color: aqua;}
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap');
+
+:root {
+    --red: #da291c;
+    --blue: #006db7;
+    --yellow: #ffd700;
+    --green: #00a14d;
+    --black: #000000;
+    --white: #ffffff;
+
+    --font: 'Rubik', sans-serif;
+    --rootsize: 20px;
+    --maxsize: 1200px;
+}
+
+body{
+    background-image: url(website_images/mainbackground.png);
+    background-color: var(--yellow);
+    font-family: var(--font);
+    font-size: var(--rootsize);
+    margin-top: 0;
+    padding: 0;
+}
+
+/* Fixed text sizes */
+p{font-size: 1rem;}
+h2{font-size: 2.5rem; font-weight: 700;}   
+h3{font-size: 1.5rem; font-weight: 600;}
+
+/* Main structure */
+#container{
+    width: 100%;
+    max-width: var(--maxsize);
+    margin: 0 auto;
+    background-color: var(--white);
+}
+
+/* Header */
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 1rem;
+}
+
+#logo{max-width: 15rem;}   
+#carticon{max-width: 3rem;}
+
+nav{
+    background-color: var(--red);
+}
+ul{
+    padding: 0;
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+}
+
+nav a {
+    display: inline-block;
+    padding: 1rem;
+    color: var(--white);
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+nav a:hover{
+    background-color: var(--yellow);
+    color: var(--black);
+}
